# remoCon

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
.cursor/rules/: architect.mdc  business.mdc  vBack.mdc  vFront.mdc  vRule.mdc
app/: deps.py  order_service.py
backend/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  cache.py  config.py  errors.py  leverage.py  logging_utils.py  main.py  middleware.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: debug.py  health.py  positions.py  root.py  symbols.py  trade.py
backend/app/clients/: __init__.py  binance.py  binance_client.py
backend/app/core/: config.py  logging.py  security.py  static.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  balance.py  cache.py  leverage_service.py  position.py  trade.py  trade_service.py
backend/app/utils/: errors.py  middleware.py
backend/data/: trades.csv  trades_backup.csv  trades_backup_with_user.csv
backend/tests/: test_balance.py
docs/: DOCKER.md  EC2-DEPLOYMENT.md  api.md  task.md
frontend/: Dockerfile  index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/Alert/: Alert.css  Alert.tsx  index.ts
frontend/src/components/Header/: Header.css  Header.tsx
frontend/src/components/MarketOrder/: MarketOrder.css  MarketOrder.tsx
frontend/src/components/PositionsTable/: PositionsTable.css  PositionsTable.tsx
frontend/src/components/SymbolSelector/: SymbolSelector.css  (+1 more)
frontend/src/utils/: api.ts  healthCheck.ts
public/: index.html
public/scripts/components/: symbol-selector.js  trade-params.js
public/scripts/core/: constants.js  dom-utils.js  main.js
public/scripts/services/: csv-service.js  mock-service.js  symbol-service.js  trade-service.js
public/styles/: legacy.css  main.css
public/styles/components/: buttons.css  cards.css  forms.css  tables.css
public/styles/core/: base.css  layout.css  variables.css
public/styles/features/: positions.css  symbol-selector.css  toast.css  trade-params.css
scripts/: deploy-ec2.sh  docker-build.sh  docker-run.sh  serve.sh  smoke.sh
